# Initialization of Autoconf with specific project information
AC_INIT([nvmm], [0.1], [wasymatieh01@gmail.com])
# Initialization of Automake
AM_INIT_AUTOMAKE
# Initialization of the project's compiler
# GCC
AC_PROG_CC
# G++
# AC_PROG_CPP

# Build configuration file for the Makefile
AC_CONFIG_FILES([Makefile])

# Output all configuration files built before
AC_OUTPUT
